syntax = "proto3";

package persistence_sdk.modules.orders.internal.transactions.define;

import "gogoproto/gogo.proto";
import "persistence_sdk/schema/types/base/id.proto";
import "persistence_sdk/schema/types/base/properties.proto";
import "persistence_sdk/schema/types/base/metaProperties.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/orders/internal/transactions/define";

service Msg {
  rpc Define(Message) returns (TransactionResponse) {};
}

message Message {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  string from = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types/base.AccAddress", (gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field From missing"'] ;
  persistence_sdk.schema.types.base.ID from_i_d = 2 [(gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field FromID missing"'] ;
  persistence_sdk.schema.types.base.MetaProperties immutable_meta_properties = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field ImmutableMetaProperties missing"'];
  persistence_sdk.schema.types.base.Properties immutable_properties = 4 [(gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field ImmutableProperties missing"'];
  persistence_sdk.schema.types.base.MetaProperties mutable_meta_properties = 5 [(gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field MutableMetaProperties missing"'];
  persistence_sdk.schema.types.base.Properties mutable_properties = 6 [(gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field MutableProperties missing"'];
}

message TransactionResponse {}
